--- a/css/custom.css
+++ b/css/custom.css
@@ -122,9 +122,12 @@ div.center
 div.subheader
 {
   text-transform: uppercase;
-  font-weight: 100;
-  font-size: 12px;
+  font-weight: 400;
+  font-size: 25px;
   text-align: left;
+
+  border-top: 1px solid #d0d0d0;
+  padding-top: 10px;
 }
 
 img.med-icon
@@ -155,6 +158,7 @@ ul.job_description
 p.job_time
 {
   font-weight: 400;
+  text-align: right;
 }
 
 p.italics
@@ -228,7 +232,7 @@ p.list_header
 
 body
 {
-  font-family: "Open Sans";
+  font-family: Helvetica, Tahoma, sans-serif;
   font-size: 13px;
   letter-spacing: 1px;
   font-weight: 100;
