--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header class="site-header">
-  <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-    <nav class="site-nav">
-    </nav>
-  </div>
+<div class="wrapper">
+    <a class="site-title center" href="{{ site.baseurl }}/">
+        <img src="img/site-pic.png" class="site-pic center" />
+        <p class="center">{{ site.title }}</p>
+    </a>
+</div>
 </header>
