adding to header

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,7 +117,10 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-weight: 500;
 }
 
 .post-list {
