finished header and body formatting

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,11 @@
 <header class="site-header">
 <div class="wrapper">
     <a class="site-title center" href="{{ site.baseurl }}/">
-        <img src="img/site-pic.png" class="site-pic center" />
+        <img src="img/site-pic.jpg" class="site-pic center" />
         <p class="center">{{ site.title }}</p>
     </a>
+    <p class="site-subtitle center">
+    Software engineer at Facebook. Formerly at Stanford, Zendesk, and Stubhub.
+    </p>
 </div>
 </header>
