--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,1 +1,6 @@
-<a href="/">{{ site.title }}</a>
+<div class="banner">
+    <a class="" href="{{ site.baseurl }}/">
+        <img src="{{ site.baseurl }} /img/site-pic.jpg" class="banner-pic"/>
+        <span class="banner-title">{{ site.title }}</span>
+    </a>
+</div>
