--- a/_layouts/default-post.html
+++ b/_layouts/default-post.html
@@ -8,7 +8,7 @@
     {% include banner.html %}
 
     <div class="page-content">
-      <div class="wrapper">
+      <div class="wrapper post">
         {{ content }}
       </div>
     </div>
