changed banner layout

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -67,10 +67,11 @@ a {
 }
 
 .banner-title {
-    font-size: 17px;
-    font-weight: 500;
+    font-size: 19px;
+    font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1px;
+    color: $brand-color;
 }
 
 /**
