--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
 <div class="wrapper">
-    <a href="/" class="footer-heading">{{ site.title }}</a>
+    <a href="{{ site.baseurl }}" class="footer-heading">{{ site.title }}</a>
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 </div>
 </footer>
