--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,21 @@
 <header class="site-header">
 <div class="wrapper">
-    <a class="site-title center" href="{{ site.baseurl }}">
+    <a class="site-title center" href="{{ "/" | prepend: site.baseurl }}">
         <img src="{{"/img/site-pic.jpg" | prepend: site.baseurl }}" class="site-pic center" />
         <p class="center">{{ site.title }}</p>
     </a>
     <p class="site-subtitle center">
     Software engineer at Facebook. Formerly at Stanford, Zendesk, and Stubhub.
     </p>
+    <div class="wrapper">
+    <ul class="media-list center">
+        <li class="icon icon-facebook"><a href="//facebook.com/itsBLAM"></a></li>
+        <li class="icon icon-twitter"><a href="//twitter.com/_brianlam"></a></li>
+        <li class="icon icon-instagram">
+            <a href="//instagram.com/_brianlam"></a>
+        </li>
+        <li class="icon icon-github"><a href="//github.com/lambrian"></a></li>
+    </ul>
+</div>
 </div>
 </header>
