rewired some formatting

--- a/_includes/header-blog.html
+++ b/_includes/header-blog.html
@@ -5,7 +5,7 @@
         <p class="center">{{ site.title }}</p>
     </a>
     <p class="site-subtitle center">
-    Software engineer at Facebook. Formerly at Stanford, Zendesk, and Stubhub.
+    Software engineer at Facebook. Formerly at Stanford, Zendesk, and StubHub.
     </p>
 </div>
 </header>
