fixed media links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,15 @@
         <p class="center">{{ site.title }}</p>
     </a>
     <p class="site-subtitle center">
-    Software engineer at Facebook. Formerly at Stanford, Zendesk, and StubHub.
+    Software engineer at Facebook. Formerly at Stanford, Zendesk, and Stubhub.
     </p>
     <div class="wrapper">
     <ul class="media-list center">
-        <li class="icon icon-facebook"><a href="//facebook.com/itsBLAM"></a></li>
-        <li class="icon icon-twitter"><a href="//twitter.com/_brianlam"></a></li>
-        <li class="icon icon-instagram">
-            <a href="//instagram.com/_brianlam"></a>
-        </li>
-        <li class="icon icon-github"><a href="//github.com/lambrian"></a></li>
+        <a href="//facebook.com/itsBLAM"><li class="icon icon-facebook"></li></a>
+        <a href="//twitter.com/_brianlam"><li class="icon icon-twitter"></li></a>
+        <a href="//instagram.com/_brianlam"><li class="icon
+            icon-instagram"></li></a>
+        <a href="//github.com/lambrian"><li class="icon icon-github"></li></a>
     </ul>
 </div>
 </div>
