added link to blog in home header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header class="site-header">
-<div class="wrapper">
+<div class="wrapper header">
     <a class="site-title center" href="{{ "/" | prepend: site.baseurl }}">
         <img src="{{"/img/site-pic.jpg" | prepend: site.baseurl }}" class="site-pic center" />
         <p class="center">{{ site.title }}</p>
     </a>
     <p class="site-subtitle center">
-    Software engineer at Facebook. Formerly at Stanford, Zendesk, and Stubhub.
+    Software engineer at Facebook. Formerly at Stanford, Zendesk, and Stubhub. Recently trying to keep a <a href="/blog">blog</a>.
     </p>
     <div class="wrapper">
     <ul class="media-list center">
