changed blockquote css

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -109,8 +109,10 @@ blockquote {
     border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
     font-size: 18px;
-    letter-spacing: -1px;
+    letter-spacing: 1.5px;
     font-style: italic;
+    font-weight: 200;
+
 
     > :last-child {
         margin-bottom: 0;
