fixed typo StubHub

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <p class="center">{{ site.title }}</p>
     </a>
     <p class="site-subtitle center">
-    Software engineer at Facebook. Formerly at Stanford, Zendesk, and Stubhub. Recently trying to keep a <a href="/blog">blog</a>.
+    Software engineer at Facebook. Formerly at Stanford, Zendesk, and StubHub. Recently trying to keep a <a href="/blog">blog</a>.
     </p>
     <div class="wrapper">
     <ul class="media-list center">
