--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-56110999-1', 'auto');
-      ga('send', 'pageview');
+      ga('send', 'pageview', location.pathname);
 
   </script>
 </head>
