--- a/_includes/header-blog.html
+++ b/_includes/header-blog.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
     <a class="site-title center" href="{{ "/" | prepend: site.baseurl }}">
         <img src="{{"/img/site-pic.jpg" | prepend: site.baseurl }}" class="site-pic center" />
-        <p class="center">{{ site.title }}</p>
+        <p class="center title">{{ site.title }}</p>
     </a>
     <p class="site-subtitle center">
     Software engineer at Facebook. Formerly at Stanford, Zendesk, and StubHub.
