--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family-serif;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
@@ -37,7 +37,9 @@ ul, ol, dl, figure,
     margin-bottom: $spacing-unit / 2;
 }
 
-
+h5 {
+  text-transform: uppercase;
+}
 
 /**
  * Images
@@ -45,9 +47,24 @@ ul, ol, dl, figure,
 img {
     max-width: 100%;
     vertical-align: middle;
+    display: block;
+    margin: 0 auto;
 }
 
+.img-group {
+  display: flex;
+}
 
+.img-group > div {
+  display: flex;
+  align-items: center;
+}
+
+.caption {
+  font-size: 12px;
+  color: grey;
+  text-align: center;
+}
 
 /**
  * Figures
@@ -82,7 +99,8 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
+  font-family: $base-font-family-sans-serif;
+  font-weight: bold;
 }
 
 
@@ -170,7 +188,7 @@ pre {
 }
 
 .post {
-    max-width: 650px;
+    max-width: 800px;
 }
 
 .post-content  a {
