--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,20 @@
-<header class="site-header">
-<div class="wrapper header">
-    <a class="site-title center" href="{{ "/" | prepend: site.baseurl }}">
-        <img src="{{"/img/site-pic.jpg" | prepend: site.baseurl }}" class="site-pic center" />
-        <p class="center title">{{ site.title }}</p>
+<div class="banner">
+  <span class="full-banner">
+    <a href="/">
+      <img class="banner-pic" src="/img/site-pic.jpg" />
+      <span class="banner-title">{{ site.title }}</span>
     </a>
-    <p class="site-subtitle center">
-    Software engineer at Facebook. Formerly at Stanford, Zendesk, and StubHub. Recently trying to keep a <a href="/blog">blog</a>.
-    </p>
-    <div class="wrapper">
-    <ul class="media-list center">
-        <a href="//facebook.com/itsBLAM"><li class="icon icon-facebook"></li></a>
-        <a href="//twitter.com/_brianlam"><li class="icon icon-twitter"></li></a>
-        <a href="//instagram.com/_brianlam"><li class="icon
-            icon-instagram"></li></a>
-        <a href="//github.com/lambrian"><li class="icon icon-github"></li></a>
-    </ul>
+  </span>
+  <div class="condensed-banner">
+    <a href="/">
+      BL
+    </a>
+  </div>
+  <div class="nav-bar-container">
+    <div>
+      <a href="/blog">
+        BLOG
+      </a>
+    </div>
+  </div>
 </div>
-</div>
-</header>
