--- a/css/main.scss
+++ b/css/main.scss
@@ -3,13 +3,13 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
 $base-font-family-serif: "Georgia", serif;
 $base-font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
+$large-font-size: $base-font-size * 1.125;
+$heavy-font-weight: 600;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
@@ -17,19 +17,16 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+$brand-color:      $grey-color-dark;
 
 // Width of the content area
 $content-width:    800px;
-
-$on-palm:          600px;
 $on-laptop:        800px;
-
-
+$on-palm:          600px;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -39,16 +36,10 @@ $on-laptop:        800px;
 //     }
 // }
 @mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+  @media screen and (max-width: $device) {
+    @content;
+  }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+@import "base";
