fixed color on header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,11 +5,13 @@
       <span class="banner-title">{{ site.title }}</span>
     </a>
   </span>
-  <div class="condensed-banner">
+  <span class="condensed-banner-container">
     <a href="/">
-      BL
+      <div class="condensed-banner">
+        BL
+      </div>
     </a>
-  </div>
+  </span>
   <div class="nav-bar-container">
     <div>
       <a href="/blog">
