changing config on new server

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <span class="full-banner">
     <a href="/">
       <img class="banner-pic" src="/img/site-pic.jpg" />
-      <span class="banner-title">{{ site.title }}</span>
+      <span class="banner-title">{{ site.name }}</span>
     </a>
   </span>
   <span class="condensed-banner-container">
