--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -223,7 +223,7 @@ a {
   font-weight: $heavy-font-weight;
 
   &:hover {
-    background-color: orange;
+    background-color: #FFD70;
   }
 
   &:visited {
@@ -288,6 +288,10 @@ Site header
 .banner {
   font-family: $base-font-family-sans-serif;
   padding: 20px;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .full-banner {
