--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -453,11 +453,32 @@ Site header
 /**
  * Posts Table of Contents
  */
+.category-section {
+  color: $grey-color-dark;
+
+  .category-title {
+    color: $grey-color-dark;
+    font-family: $base-font-family-sans-serif;
+    font-size: 24px;
+    margin: 12px 0;
+  }
+}
+
+.category-divider {
+  border-top: 1px solid $grey-color-light;
+}
+
 .post-link {
   .post-link-title {
     color: $grey-color-dark;
     font-size: $large-font-size;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
+
 
   .post-link-date {
     color: $grey-color;
