--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 $brand-color:      $grey-color-dark;
+$highlight-color:  #FFD700;
 
 // Width of the content area
 $content-width:    800px;
