--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,19 @@
 <div class="banner">
-  <span class="full-banner">
-    <a href="/">
-      <img class="banner-pic" src="/img/site-pic.jpg" />
-      <span class="banner-title">{{ site.name }}</span>
-    </a>
-  </span>
-  <span class="condensed-banner-container">
-    <a href="/">
-      <div class="condensed-banner">
-        BL
-      </div>
-    </a>
-  </span>
+  <div class="full-banner">
+    <div class="banner-icon">
+      <a href="/">
+        <div class="condensed-banner">
+          <div class="condensed-banner-title">
+            BL
+          </div>
+          <img class="banner-pic" src="/img/site-pic.jpg" />
+        </div>
+      </a>
+    </div>
+    <div>
+      <a href="/">
+        <span class="banner-title">{{ site.name }}</span>
+      </a>
+    </div>
+  </div>
 </div>
