--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,17 @@
 <div class="banner">
-  <div class="full-banner">
-    <div class="banner-icon">
-      <a href="/">
-        <div class="condensed-banner">
-          <div class="condensed-banner-title">
-            BL
-          </div>
-          <img class="banner-pic" src="/img/site-pic.jpg" />
+  <div class="banner-icon">
+    <a href="/">
+      <div class="banner-icon-content">
+        <div class="condensed-banner-title">
+          BL
         </div>
-      </a>
-    </div>
-    <div>
-      <a href="/">
-        <span class="banner-title">{{ site.name }}</span>
-      </a>
-    </div>
+        <img class="banner-pic" src="/img/site-pic.jpg" />
+      </div>
+    </a>
+  </div>
+  <div>
+    <a href="/">
+      <span class="banner-title">{{ site.name }}</span>
+    </a>
   </div>
 </div>
