photo reel styling

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -512,3 +512,23 @@ Site header
 .post-content {
   margin-bottom: $spacing-unit;
 }
+
+.photos-container {
+  align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  height: 100%;
+
+  .selected-photo-container {
+    align-items: center;
+    display: flex;
+    flex-shrink: 0;
+    height: 100%;
+    margin-left: 20px;
+
+    .selected-photo {
+      height: 96%;
+      width: auto;
+    }
+  }
+}
