--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -51,6 +51,12 @@ body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family-serif;
   color: $text-color;
   background-color: $background-color;
+  ::selection {
+    background: $highlight-color; /* WebKit/Blink Browsers */
+  }
+  ::-moz-selection {
+    background: $highlight-color; /* WebKit/Blink Browsers */
+  }
 }
 
 /**
@@ -221,13 +227,10 @@ General
 a {
   color: $text-color;
   font-weight: $heavy-font-weight;
+  text-decoration: none;
 
   &:hover {
-    background-color: $highlight-color;
-  }
-
-  &:visited {
-    color: $text-color;
+    color: $highlight-color;
   }
 }
 
@@ -272,15 +275,6 @@ Site header
   }
 }
 
-.site-pic {
-  border: 5px solid $brand-color;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: block;
-  padding: 5px;
-}
-
 .title {
   font-family: $base-font-family-sans-serif;
 }
@@ -320,12 +314,23 @@ Site header
       display: none;
     }
   }
+
+  &:hover > .banner-icon {
+    border-color: $highlight-color;
+  }
+
+  &:hover > * > *> .banner-title {
+      background-color: $highlight-color;
+  }
 }
 
 .banner-icon {
   margin-right: 4px;
   border: 2px solid $brand-color;
   border-radius: 50%;
+  &:hover {
+    border-color: $highlight-color;
+  }
 
   @include media-query($on-laptop) {
     &:hover {
