--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -172,6 +172,7 @@ pre {
   margin-left: auto;
   padding-right: $spacing-unit;
   padding-left: $spacing-unit;
+  text-align: justify;
   @extend %clearfix;
 
   @include media-query($on-laptop) {
