--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <div class="condensed-banner-title">
           BL
         </div>
-        <img class="banner-pic" src="/img/site-pic.jpg" />
+        <img class="banner-pic" src="/img/profile_pic.jpg" />
       </div>
     </a>
   </div>
